# taskBoard

./: .gitignore  AGENT_INSTRUCTIONS.md  README.md  config.example.json  config.json  inbox.md  package-lock.json  package.json  projects.json  tasks.json
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: release.yml
agents/: architect-agent.md  git-agent.md  readme-agent.md
agents/_archived/: design-agent.md  dev-agent.md  docs-agent.md  git-agent.md  qa-agent.md  readme-agent.md
apps/command-center/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/command-center/src-tauri/: Cargo.toml  tauri.conf.json
apps/command-center/src-tauri/.cargo/: config.toml
apps/command-center/src-tauri/capabilities/: default.json
apps/command-center/src-tauri/icons/: generate-icons.mjs  generate-icons.ps1  icon.icns
apps/command-center/src-tauri/src/: data.rs  main.rs  voice.rs  watcher.rs
apps/launchpad/: app.json  eas.json  metro.config.js  package.json  tsconfig.json
data/: config.json  projects.json  tasks.json
docs/: AGENTS.md  CONFIGURATION.md  REVIEW-SYSTEM-PLAN.md  SETUP.md
docs/demo/: workflow-demo.html
docs/diagrams/: daily-workflow.drawio  daily-workflow.html  data-flow.drawio  data-flow.html  voice-to-task.drawio  voice-to-task.html
docs/features/: notifications.html  pipeline-view.html  quick-launch.html  ship-wizard.html  voice-capture.html
docs/marketing/: LINKEDIN-ARTICLE-BACKUP.md  LINKEDIN-ARTICLE.md  LINKEDIN-POSTS-BACKUP.md  LINKEDIN-POSTS-COMBINED.md
docs/mockups/: klarity-branding.html  (+1 more)
(+135 files in other folders)
