[package]
name = "command-center"
version = "0.1.0"
description = "Klarity — Desktop command center for AI-assisted development"
authors = ["Arun Prakash"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
